{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 285,
  "lineage": "5a60f464-0be3-80ee-3722-91e4aac99b91",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "grand_cineplex_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:707694917286:internet-gateway/igw-010aa60d3f968b493",
            "id": "igw-010aa60d3f968b493",
            "owner_id": "707694917286",
            "tags": {
              "Name": "grand_cineplex-igw"
            },
            "tags_all": {
              "Name": "grand_cineplex-igw"
            },
            "vpc_id": "vpc-09bd36a2d1af8be7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grand_cineplex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "grand_cineplex_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:707694917286:loadbalancer/app/grand-cineplex-alb/668593c2a696346e",
            "arn_suffix": "app/grand-cineplex-alb/668593c2a696346e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "grand-cineplex-alb-1251173490.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:707694917286:loadbalancer/app/grand-cineplex-alb/668593c2a696346e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "grand-cineplex-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-073747a064bf643d7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0438a8dc6eb098f5a"
              },
              {
                "subnet_id": "subnet-066756ecf6f77a5c5"
              }
            ],
            "subnets": [
              "subnet-0438a8dc6eb098f5a",
              "subnet-066756ecf6f77a5c5"
            ],
            "vpc_id": "vpc-09bd36a2d1af8be7e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet",
            "aws_vpc.grand_cineplex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "grand_cineplex_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:707694917286:listener/app/grand-cineplex-alb/668593c2a696346e/2fc032f18bfcf8f8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:707694917286:targetgroup/grand-cineplex-tg/3e3deaf2f7f8eee6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:707694917286:listener/app/grand-cineplex-alb/668593c2a696346e/2fc032f18bfcf8f8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:707694917286:loadbalancer/app/grand-cineplex-alb/668593c2a696346e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.grand_cineplex_alb",
            "aws_lb_target_group.grand_cineplex_tg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet",
            "aws_vpc.grand_cineplex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "grand_cineplex_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:707694917286:targetgroup/grand-cineplex-tg/3e3deaf2f7f8eee6",
            "arn_suffix": "targetgroup/grand-cineplex-tg/3e3deaf2f7f8eee6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:707694917286:targetgroup/grand-cineplex-tg/3e3deaf2f7f8eee6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "grand-cineplex-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09bd36a2d1af8be7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grand_cineplex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:707694917286:route-table/rtb-0026342d0b96f9962",
            "id": "rtb-0026342d0b96f9962",
            "owner_id": "707694917286",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-010aa60d3f968b493",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09bd36a2d1af8be7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.grand_cineplex_igw",
            "aws_vpc.grand_cineplex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd4a0b6345381e34",
            "route_table_id": "rtb-0026342d0b96f9962",
            "subnet_id": "subnet-066756ecf6f77a5c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.grand_cineplex_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.grand_cineplex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:707694917286:security-group/sg-073747a064bf643d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073747a064bf643d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet (ALB and direct)",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH (restrict to your IP in production)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "grand-cineplex-ec2-sg",
            "name_prefix": "",
            "owner_id": "707694917286",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grand-cineplex-ec2-sg"
            },
            "tags_all": {
              "Name": "grand-cineplex-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bd36a2d1af8be7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grand_cineplex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:707694917286:security-group/sg-071b395a0e43c202b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071b395a0e43c202b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2 application instances only",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-073747a064bf643d7"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "grand_cineplex-rds-sg",
            "name_prefix": "",
            "owner_id": "707694917286",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grand-cineplex-rds-sg"
            },
            "tags_all": {
              "Name": "grand-cineplex-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bd36a2d1af8be7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.grand_cineplex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:707694917286:subnet/subnet-04836bbfcb7b55740",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04836bbfcb7b55740",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707694917286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grand_cineplex-private-subnet-1"
            },
            "tags_all": {
              "Name": "grand_cineplex-private-subnet-1"
            },
            "vpc_id": "vpc-09bd36a2d1af8be7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grand_cineplex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:707694917286:subnet/subnet-0438a8dc6eb098f5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0438a8dc6eb098f5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707694917286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grand_cineplex-private-subnet-2"
            },
            "tags_all": {
              "Name": "grand_cineplex-private-subnet-2"
            },
            "vpc_id": "vpc-09bd36a2d1af8be7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grand_cineplex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:707694917286:subnet/subnet-066756ecf6f77a5c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066756ecf6f77a5c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "707694917286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grand_cineplex-public-subnet"
            },
            "tags_all": {
              "Name": "grand_cineplex-public-subnet"
            },
            "vpc_id": "vpc-09bd36a2d1af8be7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grand_cineplex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "grand_cineplex_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:707694917286:vpc/vpc-09bd36a2d1af8be7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d0a98a271ab782d",
            "default_route_table_id": "rtb-080e0aebed413dfcd",
            "default_security_group_id": "sg-040b693fd0e14583b",
            "dhcp_options_id": "dopt-005beb6c73b3a14e0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09bd36a2d1af8be7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080e0aebed413dfcd",
            "owner_id": "707694917286",
            "tags": {
              "Name": "grand_cineplex-vpc"
            },
            "tags_all": {
              "Name": "grand_cineplex-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}